mise en place architecture n tiers
