# back-end-go/model/user.go
@@ -1,0 +1,7 @@
+package model
+
+type User struct {
+	Email    string `json:"email" binding:"required,email"`
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
